feat: GC logs Dockerfile